# VoiceClonAR

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Makefile  README.md  pyproject.toml
notebooks/: playground.ipynb
voiceclonar/quality_assessment/: cfg.yaml  evaluation.py  feature_extraction.py  utils.py
voiceclonar/quality_assessment/frechet_audio_distance/: __init__.py  fad.py
voiceclonar/quality_assessment/frechet_audio_distance/models/: pann.py  pytorch_utils.py
voiceclonar/quality_assessment/nisqa/: NISQA_lib.py
voiceclonar/utils/: utils.py
