[tool.poetry]
name = "voiceclonar"
version = "0.1.0"
description = ""
authors = ["nahue-passano <passano43632@estudiantes.untref.edu.ar>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
speechbrain = "^0.5.16"
librosa = "^0.10.1"
natsort = "^8.4.0"
pandas = "^2.1.4"
numpy = "1.23.4" 
torch = "*" 
scipy = "1.10.1" 
tqdm = "*" 
soundfile = "*" 
resampy = "*" 
torchlibrosa = "*" 
laion_clap = "*" 
transformers = "<=4.30.2"
torchaudio = "*" 
encodec = "*" 
torchvision = "^0.16.2"
seaborn = "^0.13.1"
plotly = "^5.18.0"
umap-learn = "^0.5.5"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.28.0"
nbconvert = "^7.14.0"
pylint = "^3.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
